--- a/GPCS_DMS/Views/Report/Index.cshtml
+++ b/GPCS_DMS/Views/Report/Index.cshtml
@@ -1,13 +1,15 @@
-@* Header (start)|(end) Change dayly , weekly , monthly , yearly (selected default dayly)*@
+@* Header (start)| (end) Change dayly , weekly , monthly , yearly (selected default dayly)  OR  range date => can selected*@
 
 @* section 1*@
 @* 4| Card ToTal Application,  Inprocess , Completed , Waiting Effective *@
 @* 2| Column Application Graph (createdAt) | pie (total application status)*@
+@* 4| Grid  1 First Column => Application Type , Other Columns => Purchaser Name => with Count *@
 
 @* section 2 *@
-@* 4| Card Total DataMaterial , DataItem , DataItem(Quotation Expire) , NeedAction (Before Expire 30 day)  *@
+@* 4| Card Total DataMaterial , DataItem , DataItem(Quotation Expire) , NeedAction (Before Expire 45 day)  *@
+@* 4| Grid (selected 1 First Columns UserType =>  Category )*@
 
-@* section 3 *@
+@* section 3 Master data *@
 @* 3 Column *@
 @* 2| Card Total Supplier               1| Calendar *@
 @* 2| Recent Application (DataGrid)     1| Exchange Rate*@
